[package]
name = "double-int"
version = "0.1.1"
description = "The double-int format represents an integer that can be stored in an IEEE 754 double-precision number without loss of precision"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "utilities", "serialization", "deserialization"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde_core = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
